--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -6,9 +6,10 @@ android {
         applicationId "com.dgsw.bamboo"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 1
+        versionCode 2
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        versionNameSuffix '.1'
     }
     buildTypes {
         release {
@@ -20,6 +21,8 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    productFlavors {
     }
 }
 
